Sonarqube issues fixed